Fifth Commit: Fixed header.major padding on smaller devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3096,6 +3096,8 @@ input, select, textarea {
 			header.major {
 				padding-left: 2em;
 				padding-right: 2em;
+				padding-top: 5em;
+				padding-bottom: 1em;
 			}
 
 			footer.major {
